# Boids-opengl

./: .gitignore  CMakeLists.txt  build.sh  debug.sh  run.sh
shaders/: vSimple.shader
src/: Boid.cpp  Boid.h  Boids.cpp  Boids.h  Quad.cpp  Quad.h  main.cpp  math_util.cpp  math_util.h
